# vigilml

./: .gitignore  .vigilml.yml  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DECISIONS.md
scripts/hooks/: install_hooks.py  on_bash_run.py  on_file_write.py  pre-commit.sh  pre_commit_check.py
tests/agents/: _agent_utils.py  agent_careless_engineer.py  agent_cicd_runner.py  agent_clean_project.py  agent_config_enforcer.py  agent_notebook_specialist.py  agent_stress_tester.py  run_all_agents.py
tests/fixtures/: setup_all_fixtures.py
tests/unit/: test_cli.py  test_cloud.py  test_config.py  test_credentials.py  test_dependencies.py  test_file_walker.py  test_json_output.py  test_model_files.py  test_terminal.py
vigilml/: __init__.py  cli.py
vigilml/output/: __init__.py  json_output.py  terminal.py
vigilml/scanner/: __init__.py  cloud.py  credentials.py  data_pipeline.py  dependencies.py  model_files.py  notebook_risks.py  prompt_injection.py
vigilml/utils/: __init__.py  config.py  file_walker.py  suppression.py
