[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vigilml"
version = "0.2.4"
description = "Security scanner for the AI development lifecycle"
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "MIT" }
authors = [{ name = "VigilML Team", email = "hello@vigilml.ai" }]
keywords = ["security", "machine-learning", "mlops", "cli", "ai-safety"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
requires-python = ">=3.10"

dependencies = ["click>=8.1", "rich>=13.0", "requests>=2.31", "pyyaml>=6.0"]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-mock>=3.12",
    "responses>=0.24",      # mock HTTP requests in tests
    "ruff>=0.3",
    "mypy>=1.8",
    "types-requests>=2.31",
    "types-PyYAML>=6.0",
    "build>=1.0",
    "twine>=5.0",
]

[project.scripts]
vigilml = "vigilml.cli:main"

[project.urls]
Homepage = "https://vigilml.ai"
Repository = "https://github.com/sharmaamanrajesh/vigilml"
Documentation = "https://docs.vigilml.ai"
"Bug Tracker" = "https://github.com/sharmaamanrajesh/vigilml/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["vigilml*"]

# ── Ruff ──────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "S",   # flake8-bandit (security)
    "N",   # pep8-naming
]
ignore = [
    "S101", # assert is fine in tests
    "S603", # subprocess without shell=True is fine
    "B008", # function calls in default args (Click does this)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "N"] # relax security and naming rules in tests

# ── Mypy ──────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
exclude = ["tests/fixtures/"]

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["--tb=short", "--strict-markers"]
markers = [
    "unit: fast tests with no external dependencies",
    "integration: tests that hit the OSV.dev API",
    "slow: tests that take more than 5 seconds",
    "agent: full agent simulation tests",
]

# ── Coverage ──────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["vigilml"]
omit = ["tests/*", "scripts/*"]

[tool.coverage.report]
show_missing = true
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
